test/success/min.dsk
struct Node
    value: int
    next: ?Node

    func append(mut self: @, new_node: Node) -> void
        if self.next: mut tail then
            tail.next = new_node
        else
            self.next = new_node
        end
    end
end

let mut node1 = Node(value = 1, next = null)
let node2 = Node(value = 2, next = null)
node1.append(node2)

if node1.next: node then
    echo(node.value)
end
